--- a/style.css
+++ b/style.css
@@ -96,8 +96,10 @@ body {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
-.button {
+.button:hover {
   cursor: pointer;
+  text-decoration: underline;
+  text-decoration-color: #2196f3;
 }
 
 .main-text-header {
@@ -170,8 +172,10 @@ body {
   color: #212121;
 }
 
-.button-list {
+.button-list:hover {
   list-style: none;
+  text-decoration: underline;
+  text-decoration-color: #2196f3;
 }
 
 .subpage-name {
