--- a/style.css
+++ b/style.css
@@ -1,7 +1,14 @@
+* {
+  margin: 0;
+}
+
 body {
   font-family: "Roboto", "Raleway", sans-serif;
   color: #757575;
+  width: 1600px;
+  height: 2349px;
 }
+
 .logotype {
   font-family: "Raleway";
   font-weight: 700;
@@ -9,6 +16,7 @@ body {
   line-height: 1.92;
   letter-spacing: 0.03em;
   color: #000000;
+  display: flex;
 }
 
 .link-none-underline {
@@ -59,8 +67,36 @@ body {
   color: #757575;
 }
 
-.contacts-list {
+.nav-list {
+  display: flex;
   list-style: none;
+  padding-left: 0;
+  line-height: 1.2;
+  gap: 46px;
+  padding-left: 93px;
+}
+
+.contacts-list {
+  display: flex;
+  list-style: none;
+  padding-left: 0;
+  line-height: 1.2;
+  gap: 46px;
+  padding: 0 0 0 371px;
+}
+
+.footer-contacts-list li {
+  padding-bottom: 9px;
+}
+
+.footer-contacts-list {
+  display: block;
+  list-style: none;
+  padding-left: 0;
+  font-size: 14px;
+  line-height: 1.2;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
 }
 
 .main-section-header {
@@ -70,16 +106,26 @@ body {
   line-height: 1.36;
   letter-spacing: 0.06em;
   color: #ffffff;
+  width: 696px;
+  height: 120px;
+  text-align: center;
 }
 .main-section-background {
   background-color: #2f303a;
   color: var(--white);
-  width: 100%;
+  /* width: 100%;
   display: flex;
   width: 1600px;
   height: 600px;
   left: 0px;
-  top: 80px;
+  top: 80px; */
+  width: 100%;
+  display: flex;
+  gap: 30px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 200px 0;
 }
 
 .order-button {
@@ -87,13 +133,22 @@ body {
   font-weight: 700;
   font-size: 16px;
   line-height: 1.88;
-  display: flex;
-  align-items: center;
+
   text-align: center;
   letter-spacing: 0.06em;
   color: #ffffff;
   background: #2196f3;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-style: none;
+  border-radius: 4px;
+  width: 200px;
+  height: 50px;
+}
+
+.order-button:hover {
+  cursor: pointer;
+  text-decoration: underline;
+  text-decoration-color: #2196f3;
 }
 
 .button:hover {
@@ -117,41 +172,92 @@ body {
   font-size: 14px;
   line-height: 2;
   letter-spacing: 0.03em;
+  color: #757575;
+}
+
+.what-we {
+  width: 1200px;
+  margin: 0 auto;
+  align-items: center;
 }
 
 .what-we-do {
   font-family: "Roboto";
   font-weight: 700;
   font-size: 36px;
-  line-height: 41.17;
+  line-height: 1.17;
   letter-spacing: 0.03em;
   color: #212121;
+  text-align: center;
+  padding-bottom: 50px;
 }
+
+.first-imgs {
+  display: flex;
+  justify-content: space-between;
+  padding-left: 0;
+  list-style: none;
+}
+
+.our-team {
+  height: 648px;
+  background: #f5f4fa;
+  padding: 94px 0;
+}
+
+.team-section {
+  width: 1200px;
+  align-items: center;
+  margin-left: 215px;
+}
+
 .team {
   font-family: "Roboto";
   font-weight: 700;
   font-size: 36px;
-  line-height: 41.17;
+  line-height: 1.17;
   letter-spacing: 0.03em;
   color: #212121;
+  text-align: center;
+  padding-bottom: 50px;
 }
 
-.job-posiotion {
+.second-imgs {
+  list-style: none;
+  display: flex;
+  justify-content: space-between;
+  padding-left: 0;
+}
+
+.team-card {
+  background-color: #ffffff;
+  box-shadow: 0px 1px 3px rgb(0 0 0 / 12%), 0px 1px 1px rgb(0 0 0 / 14%),
+    0px 2px 1px rgb(0 0 0 / 20%);
+  border-radius: 0px 0px 4px 4px;
+  text-align: center;
+  margin: 0;
+  width: 270px;
+  height: 368px;
+}
+.name {
   font-family: "Roboto";
   font-weight: 500;
   font-size: 16px;
   line-height: 1.19;
   letter-spacing: 0.03em;
   color: #212121;
+  padding: 30px 90px 10px 90px;
 }
 
-.name {
+.job-position {
   font-family: "Roboto";
   font-weight: 400;
   font-size: 16px;
   line-height: 1.19;
   letter-spacing: 0.03em;
-  color: #212121;
+  color: #757575;
+  padding-bottom: 30px;
+  text-align: center;
 }
 
 .address {
@@ -161,6 +267,7 @@ body {
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: #ffffff;
+  padding-bottom: 20px;
 }
 
 .button-list {
@@ -185,6 +292,7 @@ body {
   line-height: 2;
   letter-spacing: 0.06em;
   color: #212121;
+  margin: 20px 24px 4px 24px;
 }
 
 .subpage-type {
@@ -193,4 +301,105 @@ body {
   font-size: 16px;
   line-height: 1.88;
   letter-spacing: 0.03em;
+  margin: 0 24px 20px 24px;
+}
+
+.page {
+  background: #ffffff;
+  width: 1600px;
+  margin: 0 auto;
+}
+
+.header-container {
+  align-items: center;
+  flex-direction: row;
+  padding: 25px 0 24px 0;
+  display: flex;
+}
+
+.second-body-section {
+  list-style: none;
+  background-color: #ffffff;
+  display: flex;
+  text-align: left;
+  justify-content: space-between;
+  padding: 94px 215px;
+}
+
+.second-body-section > .main-text-section:not(:last-child) {
+  margin-right: 30px;
+}
+
+.main-text-section {
+  width: 270px;
+  height: 75px;
+}
+
+.footer-container {
+  background: #2f303a;
+  height: 254px;
+  margin: 0 auto;
+}
+
+.footer-section {
+  width: 1200px;
+  padding: 60px 0 0 0;
+  flex-direction: column;
+}
+
+.white-text {
+  color: #ffffff;
+}
+
+.filter-buttons {
+  display: flex;
+  justify-content: center;
+  list-style: none;
+  gap: 8px;
+  margin-top: 94px;
+}
+
+.filter-button:hover {
+  border: 1px solid #2196f3;
+}
+
+.filter-button {
+  width: 91px;
+  height: 38px;
+  background: #f5f4fa;
+  border-radius: 4px;
+  border-style: none;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.6;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #212121;
+  font-family: "Roboto";
+}
+
+.card-list {
+  list-style: none;
+  display: flex;
+  width: 1200px;
+  flex-wrap: wrap;
+  margin: 30px 0 94px 0;
+  padding-left: 0;
+  gap: 30px;
+}
+
+.card {
+  width: 370px;
+  height: 404px;
+  background: #ffffff;
+  border: 1px solid #eeeeee;
+}
+
+.container {
+  width: 1200px;
+  margin: 0 auto;
+}
+
+.border {
+  border-bottom: 1px solid #ececec;
 }
