--- a/style.css
+++ b/style.css
@@ -5,8 +5,6 @@
 body {
   font-family: "Roboto", "Raleway", sans-serif;
   color: #757575;
-  width: 1600px;
-  height: 2349px;
 }
 
 .logotype {
@@ -34,7 +32,7 @@ body {
   line-height: 1.14;
   letter-spacing: 0.02em;
 
-  color: #2196f3;
+  color: #212121;
 }
 
 .portfolio {
@@ -152,6 +150,13 @@ body {
   cursor: pointer;
   text-decoration: underline;
   text-decoration-color: #2196f3;
+  color: #2196f3;
+}
+
+.logotype-button:hover {
+  cursor: pointer;
+  text-decoration: underline;
+  text-decoration-color: #2196f3;
 }
 
 .main-text-header {
@@ -197,15 +202,9 @@ body {
 }
 
 .our-team {
-  height: 648px;
   background: #f5f4fa;
   padding: 94px 0;
-}
-
-.team-section {
-  width: 1200px;
   align-items: center;
-  margin-left: 215px;
 }
 
 .team {
